--- a/composer.json
+++ b/composer.json
@@ -189,6 +189,7 @@
         "drupal/date_recur_modular": "^1.0@alpha",
         "drupal/disqus": "^1.0",
         "drupal/easy_breadcrumb": "^1.8",
+        "drupal/elasticsearch_connector": "^7.0@alpha",
         "drupal/entity_reference_revisions": "^1.6",
         "drupal/field_tools": "^1.0@alpha",
         "drupal/fullcalendar": "1.x-dev",
@@ -215,7 +216,8 @@
         "drupal/rng_quick": "^1.1",
         "drupal/rng_views": "^1.7",
         "drupal/robotstxt": "^1.2",
-        "drupal/search_api": "^1.9",
+        "drupal/search_api": "^1.15",
+        "drupal/search_api_page": "^1.0@beta",
         "drupal/shorten": "2.x-dev",
         "drupal/slick": "^2.0",
         "drupal/slick_media": "^2.0",
