--- a/profile/modules/os/modules/os_media/os_media.services.yml
+++ b/profile/modules/os/modules/os_media/os_media.services.yml
@@ -5,3 +5,6 @@ services:
   os_media.media_helper:
     class: \Drupal\os_media\MediaEntityHelper
     arguments: ['@http_client', '@media.oembed.iframe_url_helper', '@config.factory', '@messenger', '@logger.factory']
+  os_media.media_admin_ui_helper:
+    class: \Drupal\os_media\MediaAdminUIHelper
+    arguments: ['@entity_type.manager']
