Issue #11096 - onepage theme layout and lop widget alignment (#12766)
* Issue #11096 - onepage theme layout and lop widget alignment

* Issue #11096 - added fixed menu to onepage

* Issue #11096 - add lop scss file

* Issue #11096 - fixed a11y issues

* Issue #11096 - fixed pr points

--- a/profile/themes/onepage/onepage.libraries.yml
+++ b/profile/themes/onepage/onepage.libraries.yml
@@ -4,3 +4,5 @@ global-styling:
     theme:
       '//fonts.googleapis.com/css?family=Montserrat': { external: true }
       css/style.css: {}
+  js:
+    js/onepage.js: {}
