Issue #12641 - Added Filter by Post Widget and facet config (#12754)
* Issue #Elastic - Elastic Search Container & Elastic Connector Settings

* Issue #Elastic - Elastic Search with Pages

* Issue #Elastic - Elastic-Search

* Issue #Elastic - Moving Field with Processor

* Issue #Elastic - Search By Group

* Issue #12630 - Winding Up - Search

* Issue #12630 - Remove Kibana

* Issue #12630 - Without Group - Publication Fix

* Issue #12630 - SpellCheck - Hit & Trial

* Issue #12630 - Search Permission

* Issue #12630 - Enabled Apps Support: WIP

* Issue #12630 - Enabled Apps Support: WIP

* Issue #12630 - Cron: Search Index

* Issue #12630 - PR Changes & Type

* Issue #12630 - Change Group ID to integer.

* Issue #12630 - PR Changes

* Issue #12630 - Push One time Configs - Search Server

* Issue #12630 - search page css

* Issue #12630 - search page ui fixes

* Issue #12641 - Added Filter by Post Widget and facet config

* Issue #12641 - Added search layout context for widgets

* Issue #12641 - Filter by post pr changes

* Issue #12641 - Filter by post widget test case

* Issue #12641 - Added Filter by Post Widget and facet config

* Issue #12641 - Added search layout context for widgets

* Issue #12641 - Filter by post pr changes

* Issue #12641 - Filter by post widget test case

* Issue #12641 - Test case for helper service and pr changes

* Issue #12641 - Facet config for filter by post

* Issue #12641 - Resolved composer conflict.

* Issue #12641 - Added dependency for os_search module

* Issue #12641 - Travis build fix

Co-authored-by: mukeyshkumar <47223502+mukeyshkumar@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -191,6 +191,7 @@
         "drupal/easy_breadcrumb": "^1.8",
         "drupal/elasticsearch_connector": "^7.0@alpha",
         "drupal/entity_reference_revisions": "^1.6",
+        "drupal/facets": "^1.4",
         "drupal/field_tools": "^1.0@alpha",
         "drupal/fullcalendar": "1.x-dev",
         "drupal/google_analytics": "^2.4",
