Issue #10897 - Code refactoring
Restrict to `LIKE` operator.

--- a/config/sync/views.view.os_media.yml
+++ b/config/sync/views.view.os_media.yml
@@ -1903,7 +1903,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: '='
+          operator: LIKE
           value: ''
           group: 1
           exposed: true
