--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@
 /build/
 
 # Ignore local configs
-local_config/
+local_config/*
+!local_config/.gitkeep
 
 # Ignore vsite specific configurations
 config/sync/vsite:*
