Issue #12090 - Install node_revision_delete and configure (#12723)
* Issue #12090 - Install node_revision_delete and configure

* Issue #12090 - Create a new module for handle bibcite reference revisions, code snippet from node_revision_delete contrib module

* Issue #12090 - Require again drupal/node_revision_delete

* Issue #12090 - Fix count issue at

* Issue #12090 - Require contrib again

* Issue #12090 - Decrease max number to 11, count current revision too

* Issue #12090 - Fix last execute logic and using state variable

* Issue #12090 - Fix return type

* Issue #12090 - Apply patch for fix cron execute logic, resolve confict

* Issue #12090 - Revert count logic to original node revision delete module, and keep 11 settings as we use in contrib module

--- a/composer.json
+++ b/composer.json
@@ -205,6 +205,7 @@
         "drupal/mailchimp": "^1.8",
         "drupal/mathjax": "^2.7",
         "drupal/metatag": "^1.7",
+        "drupal/node_revision_delete": "^1.0@beta",
         "drupal/pagebreak": "^1.0",
         "drupal/paragraphs": "^1.4",
         "drupal/pathauto": "^1.2",
@@ -413,6 +414,9 @@
             "drupal/config_ignore": {
                 "Override drush cim/cex for filtering": "https://www.drupal.org/files/issues/2019-01-08/2973431-supplementary-drush-commands-17.patch",
                 "Allow adding continer filtering": "https://www.drupal.org/files/issues/2019-01-09/2973431-ignore-collections-18.patch"
+            },
+            "drupal/node_revision_delete": {
+                "Fix last execute and period logic": "https://www.drupal.org/files/issues/2019-12-20/fix-last-execute-logic-3102382-2.patch"
             }
         },
         "patches-ignore": {
