--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -10,6 +10,7 @@ module:
   bibcite_entity: 0
   bibcite_export: 0
   bibcite_preview: 0
+  bibcite_revision_delete: 0
   bibcite_ris: 0
   big_pipe: 0
   blazy: 0
@@ -99,6 +100,7 @@ module:
   metatag_twitter_cards: 0
   metatag_views: 0
   node: 0
+  node_revision_delete: 0
   options: 0
   os: 0
   os_app_access: 0
