--- a/config/sync/node.type.news.yml
+++ b/config/sync/node.type.news.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - node_revision_delete
     - purl
 third_party_settings:
   menu_ui:
@@ -13,6 +14,10 @@ third_party_settings:
     parent: 'main:'
   purl:
     keep_context: 1
+  node_revision_delete:
+    minimum_revisions_to_keep: 11
+    minimum_age_to_delete: 0
+    when_to_delete: 0
 name: News
 type: news
 description: ''
