Issue #12459 - custom book form (#12756)
* Issue #12375 - Restrict outline form options to vsite pages.

* Issue #12375 - Book outline form alter.

* Issue #12375 - Removing Subpage contextual links for non-book pages.

* Issue #12375 - Addressed PR feedback and added tests.

* Issue #12459 - Custom book outline form added.

* Issue #12375 - Modified os_pages tests.

* Issue #12459 - Custom Book outline form.

* Issue #12459 - Book form modified.

* Issue #12459 - Reverting book condition.

* Issue #12459 - Add other books form updated.

* Issue #12459 - Submit handler code added.

* Issue #12459 - Pages of same book averted in form and submit handled.

* Issue #12459 - Removed unnecessary calls.

* Issue #12459 - Integration tests for Add other books form.

* Issue #12459 - PR feedback committed.

* Issue #12459 - Kernel tests and code cleanup.

* Issue #12459 - Code corrections.

* Issue #12459 - Service tests added.

--- a/profile/modules/apps/os_pages/os_pages.routing.yml
+++ b/profile/modules/apps/os_pages/os_pages.routing.yml
@@ -9,6 +9,7 @@ os_pages.book_outline:
     node: \d+
   options:
     _node_operation_route: TRUE
+
 os_pages.export:
   path: '/export/{node}'
   defaults:
@@ -16,3 +17,34 @@ os_pages.export:
   requirements:
     _entity_access: 'node.view'
     node: \d+
+
+os_pages.add_other_books:
+  path: '/node/{node}/add-other-books'
+  defaults:
+    _form: '\Drupal\os_pages\Form\AddOtherBooksForm'
+    _title: 'Add other books'
+  options:
+    _node_operation_route: TRUE
+    parameters:
+      node:
+        type: entity:node
+  requirements:
+    _permission: 'access content'
+    _group_permission: 'administer book outlines'
+    _entity_access: 'node.view'
+    node: \d+
+
+os_pages.autocomplete.books:
+  path: '/os_pages/books-autocomplete/{group}/{node}'
+  defaults:
+    _controller: '\Drupal\os_pages\Controller\BooksAutocompleteController::handleAutocomplete'
+    _format: json
+  options:
+    parameters:
+      group:
+        type: entity:group
+      node:
+        type: entity:node
+  requirements:
+    _permission: 'access content'
+    _group_permission: 'administer book outlines'
