Issue #12192 - Author Duplication - Check (#12758)
* Issue #12192 - Author Duplication - Check

* Issue #12192 - PHPCS Error fix

* Issue #12192 - Duplication Tests

* Issue #12192 - Duplication Tests

* Issue #12192 - PR Changes

* Issue #12192 - PR changes

* Issue #12192 - Test cases change for contributor

--- a/profile/modules/apps/os_publications/os_publications.services.yml
+++ b/profile/modules/apps/os_publications/os_publications.services.yml
@@ -22,3 +22,6 @@ services:
   os_publications.citation_helper:
     class: Drupal\os_publications\CitationHelper
     arguments: ['@config.factory', '@plugin.manager.bibcite_format']
+  os_publications.contributor_helper:
+    class: Drupal\os_publications\ContributorHelper
+    arguments: ['@entity_type.manager']
