--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ jobs:
     - script: robo job:run-kernel-tests "cp,other,cp-menu,profiles,redirect,cp-appearance"
     - script: robo job:run-kernel-tests "widgets-4,publications-2"
     - script: robo job:run-functional-tests "classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,cp-menu,vsite_favicon"
-    - script: robo job:run-functional-tests "analytics,publications,cp-appearance,redirect,twitter,os,vsite"
+    - script: robo job:run-functional-tests "analytics,publications,cp-appearance,redirect,twitter,os,vsite,cp-import"
     - script: robo job:run-functional-javascript-tests "classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect"
     - script: robo job:run-functional-javascript-tests "events,os,vsite,os-theme-preview,widgets,blog,faq,news,presentations"
     - stage: codecov
