--- a/config/sync/vsite.type.personal.yml
+++ b/config/sync/vsite.type.personal.yml
@@ -1,10 +1,10 @@
-uuid: e5df4489-6352-490e-b0c7-42b7b8739320
+uuid: 8aa60fbf-357c-4c97-97f3-6fb1ed3686b3
 langcode: en
 status: true
 dependencies: {  }
-id: minimal
-label: Minimal
-description: 'Minimal preset with little enabled'
+id: personal
+label: Personal
+description: 'Personal preset with some default content.'
 applicableTo:
   personal: personal
 creationTasks: ''
