Issue #12193 - Fix - Drag block here missing in the right side bar section (#12793)
* Issue #12193 - fix - block placeholder in right sidebar not appearing

* Issue #12193 - disable well config for sidebar_second in os_base

* Issue #12193 - leftover configs

* Issue #12193 - remove the extra margin in sidebar_second

fix is done for clean and clean_blue themes

* Issue #12193 - remove unnecessary theme settings

* Issue #12193 - fix - php warning while widget placement in new vsites

--- a/config/sync/os_base.settings.yml
+++ b/config/sync/os_base.settings.yml
@@ -18,6 +18,7 @@ logo:
 breadcrumb_home: 1
 breadcrumb_title: 0
 region_wells:
+  branding_header: ''
   navigation_collapsible: ''
   header: ''
   header_left: ''
@@ -26,7 +27,7 @@ region_wells:
   content_first: ''
   content_second: ''
   sidebar_first: ''
-  sidebar_second: well
+  sidebar_second: ''
   content_bottom: ''
   content_bottom_first: ''
   content_bottom_second: ''
@@ -34,5 +35,5 @@ region_wells:
   footer_left: ''
   footer_right: ''
   footer_bottom: ''
-table_responsive: '-1'
+  branding_footer: ''
 table: ''
