--- a/profile/tests/modules/os_test/os_test.info.yml
+++ b/profile/tests/modules/os_test/os_test.info.yml
@@ -1,4 +1,4 @@
-name: OS Testing
+name: OpenScholar Tests Helper
 type: module
-description: 'Provides the base for OS tests.'
+description: 'Provides the helpers, resources, etc. that are going to be used for executing the tests in OpenScholar.'
 core: 8.x
