--- a/profile/themes/onepage/onepage.libraries.yml
+++ b/profile/themes/onepage/onepage.libraries.yml
@@ -1,5 +1,5 @@
 global-styling:
-  version: VERSION
+  version: -1
   css:
     theme:
       '//fonts.googleapis.com/css?family=Montserrat': { external: true }
