12639 search filter by post date (#12784)
* Issue #12639 - Added the process and WIP for query alter.

* Issue #12639 - Fixed PHPcs.

* Issue #12639 - Created widget for Filter by post date and added query string.

* Issue #12639 - Added Test scenario for block.

* Issue #12639 - Changed function name.

* Issue #12639 - Added required config.

* Issue #12639 - WIP: Fixed, date granular issue in widget. Resolving listing all apps.

* Issue #12639 - Resolved issue related custom date filter for minutes.

* Issue #12639 - Created variable for date service. Also, removed the condition for the isset in if else. Also now loading the apps from facets.

* Issue #12639 - Fetched creation time form facets and based on the condition from querystring generating the links.

* Issue #12639 - Added widget group.

* Issue #12639 - Created helper to filter the date.

* Issue #12639 - Corrected doc for search helper and also added the request method from module.

* Issue #12639 - PHPcs Fixes

* Issue #12639 - Removed the Post Date Processor.

* Issue #12639 - Deleted search helper test class file.

--- a/config/sync/search_api.index.os_search_index.yml
+++ b/config/sync/search_api.index.os_search_index.yml
@@ -133,6 +133,7 @@ processor_settings:
   add_bundle_as_text: {  }
   add_created_as_text: {  }
   add_group_as_text: {  }
+  add_post_date_as_text: {  }
   add_title_as_text: {  }
   add_type_as_text: {  }
   add_url: {  }
