--- a/profile/modules/custom/os_search/os_search.services.yml
+++ b/profile/modules/custom/os_search/os_search.services.yml
@@ -2,3 +2,6 @@ services:
   os_search.list_app_helper:
     class: Drupal\os_search\ListAppsHelper
     arguments: ['@os_app_access.app_loader', '@current_user']
+
+  os_search.os_search_helper:
+    class: Drupal\os_search\OsSearchHelper
