Issue #12734 -  widget slider (#12781)
* Issue #12734 - Slider widget fields.

* Issue #12734 - Slider widget code changes.

* Issue #12734 - Altered slider fields display.

* Issue #12734 - Renamed fieldnames.

* Issue #12734 - Slider code changes.

* Issue #12734 - Added tests and added few twig variables.

* Issue #12734 - Moved slider Widget assertion tests.

* Issue #12734 - code added for widget slider ui

* Issue #12734 - Functional tests and PR feedback.

* Issue #12734 - added scrollbar and ui for arrows

* Issue #12734 - fixed color variables

* Issue #12734 - fixed a11y issues

* Issue #12734 - PR feedback and fieldset added.

Co-authored-by: mukeyshkumar <47223502+mukeyshkumar@users.noreply.github.com>

--- a/profile/modules/apps/os_widgets/os_widgets.libraries.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.libraries.yml
@@ -74,3 +74,11 @@ lofWidgetForm:
   css:
     component:
       css/os_widgets.lof.css: {}
+sliderWidget:
+  js:
+    js/os_widget_slider.js: {}
+  dependencies:
+    - core/drupal
+    - core/drupalSettings
+    - slick/slick
+    - slick/slick.theme
