--- a/profile/themes/holyoke/holyoke.info.yml
+++ b/profile/themes/holyoke/holyoke.info.yml
@@ -4,6 +4,7 @@ description: 'A monochrome version of the Classic theme'
 base theme: onepage
 core: 8.x
 type: theme
+onepage: true
 
 regions:
   branding_header: 'Branding Header'
