--- a/config/sync/core.entity_view_display.block_content.dataverse_list.default.yml
+++ b/config/sync/core.entity_view_display.block_content.dataverse_list.default.yml
@@ -14,7 +14,7 @@ mode: default
 content:
   field_widget_title:
     weight: 0
-    label: above
+    label: visually_hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
