--- a/profile/modules/apps/os_faq/migrations/os_faq_import.yml
+++ b/profile/modules/apps/os_faq/migrations/os_faq_import.yml
@@ -5,7 +5,7 @@ label: 'CSV file migration'
 source:
   plugin: csv
   path: public://importcsv/os_faq.csv
-  ids: [Title, Path]
+  ids: [Timestamp, Title, Path]
   constants:
     view: '/faq/'
 process:
