--- a/profile/modules/cp/modules/cp_import/cp_import.services.yml
+++ b/profile/modules/cp/modules/cp_import/cp_import.services.yml
@@ -6,10 +6,10 @@ services:
       - { name: 'event_subscriber' }
   cp_import.helper:
     class: '\Drupal\cp_import\Helper\CpImportHelper'
-    arguments: ['@vsite.context_manager', '@os_media.media_helper', '@current_user', '@language_manager', '@entity_type.manager', '@entity_field.manager', '@file_system']
+    arguments: ['@vsite.context_manager', '@os_media.media_helper', '@current_user', '@language_manager', '@entity_type.manager', '@entity_field.manager', '@file_system', '@datetime.time', '@pathauto.generator']
   app_import_factory:
     class: 'Drupal\cp_import\AppImportFactory'
-    arguments: ['@cp_import.helper']
+    arguments: ['@cp_import.helper', '@vsite.alias_storage', '@language_manager']
   cp_import_access.check:
     class: '\Drupal\cp_import\Access\CpImportAccessCheck'
     arguments: ['@os_app_access.app_access']
