Issue #11912 - Better duplicate widget description handling (#12113)
* #11912: New Field Constraint to limit validation to vsite-specific values only.

* #11912: Replace the existing UniqueField validator with the new VsiteUniqueField validator.

* #11912: Code style

* Issue #11912 - Code refactoring.

* Issue #11912 - Tests added for validation service.

* Issue #11912 - Pr changes.

--- a/profile/modules/vsite/vsite.services.yml
+++ b/profile/modules/vsite/vsite.services.yml
@@ -62,3 +62,7 @@ services:
   vsite.form_delete_destination:
     class: Drupal\vsite\FormDeleteDestination
     arguments: ['@vsite.context_manager']
+
+  vsite.validate_helper:
+    class: Drupal\vsite\Helper\VsiteFieldValidateHelper
+    arguments: ['@vsite.context_manager', '@entity_type.manager']
