--- a/config/sync/views.view.publications.yml
+++ b/config/sync/views.view.publications.yml
@@ -536,11 +536,11 @@ display:
         - 'languages:language_interface'
         - url.query_args
       tags:
-        - 'config:core.entity_view_display.bibcite_reference.artwork.citation'
         - 'config:core.entity_view_display.bibcite_reference.artwork.default'
+        - 'config:core.entity_view_display.bibcite_reference.artwork.teaser'
+        - 'config:core.entity_view_display.bibcite_reference.artwork.citation'
         - 'config:core.entity_view_display.bibcite_reference.artwork.slide_teaser'
         - 'config:core.entity_view_display.bibcite_reference.artwork.table'
-        - 'config:core.entity_view_display.bibcite_reference.artwork.teaser'
         - 'config:core.entity_view_display.bibcite_reference.audiovisual.citation'
         - 'config:core.entity_view_display.bibcite_reference.audiovisual.default'
         - 'config:core.entity_view_display.bibcite_reference.audiovisual.slide_teaser'
@@ -2669,6 +2669,34 @@ display:
             label: ''
           entity_type: bibcite_reference
           entity_field: bibcite_year
+          plugin_id: standard
+        publication_month:
+          id: publication_month
+          table: bibcite_reference
+          field: publication_month
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: bibcite_reference
+          entity_field: publication_month
+          plugin_id: standard
+        publication_day:
+          id: publication_day
+          table: bibcite_reference
+          field: publication_day
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: bibcite_reference
+          entity_field: publication_day
           plugin_id: standard
         is_sticky:
           id: is_sticky
