Issue #12862 - Search In Title (#12848)
* Issue #12862 - Search In Title

* Issue #12862 - Revert unwanted changes

--- a/config/sync/search_api.index.os_search_index.yml
+++ b/config/sync/search_api.index.os_search_index.yml
@@ -56,7 +56,7 @@ field_settings:
   custom_title:
     label: 'Custom Title (text)'
     property_path: custom_title
-    type: string
+    type: text
   custom_type:
     label: 'Custom Type (text)'
     property_path: custom_type
@@ -133,7 +133,6 @@ processor_settings:
   add_bundle_as_text: {  }
   add_created_as_text: {  }
   add_group_as_text: {  }
-  add_post_date_as_text: {  }
   add_title_as_text: {  }
   add_type_as_text: {  }
   add_url: {  }
@@ -193,6 +192,7 @@ processor_settings:
     all_fields: true
     fields:
       - body
+      - custom_title
       - reference_title
     exceptions:
       mexican: mexic
@@ -204,6 +204,7 @@ processor_settings:
     all_fields: true
     fields:
       - body
+      - custom_title
       - reference_title
     spaces: ''
     overlap_cjk: 1
