Issue #12822 - Fix form at dataset widgets and extend identifier description (#12855)

--- a/config/sync/core.entity_form_display.block_content.dataverse_dataset.default.yml
+++ b/config/sync/core.entity_form_display.block_content.dataverse_dataset.default.yml
@@ -32,7 +32,7 @@ content:
     weight: 4
     settings: {  }
     third_party_settings: {  }
-    type: options_select
+    type: options_buttons
     region: content
   field_embed_height:
     weight: 26
