--- a/config/sync/field.field.block_content.dataverse_dataset.field_dataset_persistent_type.yml
+++ b/config/sync/field.field.block_content.dataverse_dataset.field_dataset_persistent_type.yml
@@ -15,7 +15,9 @@ label: 'Dataset Persistent Type'
 description: ''
 required: true
 translatable: true
-default_value: {  }
+default_value:
+  -
+    value: doi
 default_value_callback: ''
 settings: {  }
 field_type: list_string
