--- a/config/sync/views.view.upcoming_calendar.yml
+++ b/config/sync/views.view.upcoming_calendar.yml
@@ -706,6 +706,7 @@ display:
         title: false
         pager: false
         use_ajax: false
+        arguments: false
       row:
         type: 'entity:node'
         options:
@@ -851,11 +852,48 @@ display:
             button_text: 'Load More'
             automatically_load_content: 1
       use_ajax: true
+      arguments:
+        field_taxonomy_terms_target_id:
+          id: field_taxonomy_terms_target_id
+          table: node__field_taxonomy_terms
+          field: field_taxonomy_terms_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: ignore
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: true
+          title: '{{ drupal_field(''name'', ''taxonomy_term'', arguments.field_taxonomy_terms_target_id) }}'
+          default_argument_type: fixed
+          default_argument_options:
+            argument: ''
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          plugin_id: numeric
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - url.query_args
         - 'user.node_grants:view'
       tags:
